benerin image slide yang gak responsive

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ aside{
     /* .menu-opened{
         display: none;
     } */
+    .slider{
+        margin-top: -15px;
+        height: 600px !important;
+    }
 }
 
 /* CSS part DOM Manipulation & Effects : Slider */
